--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,23 +34,23 @@ services:
       PHP_OPCACHE_MEMORY_CONSUMPTION: ${PHP_OPCACHE_MEMORY_CONSUMPTION}   # "0" para desarrollo, 1 para produccion
       PHP_OPCACHE_MAX_WASTED_PERCENTAGE: ${PHP_OPCACHE_MAX_WASTED_PERCENTAGE}   # "0" para desarrollo, 1 para produccion
 
-  supervisor:
-    build:
-      context: .
-      dockerfile: Dockerfile-supervisor
-    image: tickets:supervisor-${IMAGE_ENVIROMENT}
-    container_name: capa-supervisor
-    depends_on:
-      - php
-    restart: unless-stopped
-    volumes:
-      - ./build/supervisor:/etc/supervisor/conf.d
-      - ./src:/var/www/html
-    environment:
-      PHP_OPCACHE_ENABLE: ${PHP_OPCACHE_ENABLE}  # "0" para desarrollo, 1 para produccion
-      PHP_OPCACHE_MAX_ACCELERATED_FILES: ${PHP_OPCACHE_MAX_ACCELERATED_FILES}   # "0" para desarrollo, 1 para produccion
-      PHP_OPCACHE_MEMORY_CONSUMPTION: ${PHP_OPCACHE_MEMORY_CONSUMPTION}   # "0" para desarrollo, 1 para produccion
-      PHP_OPCACHE_MAX_WASTED_PERCENTAGE: ${PHP_OPCACHE_MAX_WASTED_PERCENTAGE}   # "0" para desarrollo, 1 para produccion
+#  supervisor:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile-supervisor
+#    image: tickets:supervisor-${IMAGE_ENVIROMENT}
+#    container_name: capa-supervisor
+#    depends_on:
+#      - php
+#    restart: unless-stopped
+#    volumes:
+#      - ./build/supervisor:/etc/supervisor/conf.d
+#      - ./src:/var/www/html
+#    environment:
+#      PHP_OPCACHE_ENABLE: ${PHP_OPCACHE_ENABLE}  # "0" para desarrollo, 1 para produccion
+#      PHP_OPCACHE_MAX_ACCELERATED_FILES: ${PHP_OPCACHE_MAX_ACCELERATED_FILES}   # "0" para desarrollo, 1 para produccion
+#      PHP_OPCACHE_MEMORY_CONSUMPTION: ${PHP_OPCACHE_MEMORY_CONSUMPTION}   # "0" para desarrollo, 1 para produccion
+#      PHP_OPCACHE_MAX_WASTED_PERCENTAGE: ${PHP_OPCACHE_MAX_WASTED_PERCENTAGE}   # "0" para desarrollo, 1 para produccion
 
   laravel-echo-server:
     build:
