--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.3.0",
         "datatables.net": "^1.10.23",
         "datatables.net-bs4": "^1.10.23",
         "datatables.net-buttons-bs4": "^1.6.5"
